@@ -208,6 +208,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #28985: Update authorizer constants in sqlite3 module.
+  Patch by Dingyuan Wang.
+
 - Issue #29094: Offsets in a ZIP file created with extern file object and modes
   "w" and "x" now are relative to the start of the file.
 
